# dds-demo-2025

./: README.md
AirQuality-Demo/: CMakeLists.txt  README.md  cyclonedds.xml
AirQuality-Demo/idl/: AirQuality.idl
AirQuality-Demo/src/: air_dashboard.html  air_dashboard.html.old  config.h  district_data.h  district_data.h.old  publisher.c  subscriber.c  web_subscriber.c  web_subscriber.c.fault  web_subscriber.c.new
Energy-Demo/: CMakeLists.txt  CMakeLists.txt.orig  CMakeLists.txt.work  README.md
Energy-Demo/idl/: PowerPlantData.idl
Energy-Demo/src/: config.h  dashboard.html  dashboard.html.work  plant_data.h  publisher.c  subscriber.c  web_subscriber.c  web_subscriber.c.orig
Form-Demo/: cdds.log.48022  document.idl  index.html  server.py  subscriber.py
Form-Demo/DocumentModule/: .idlpy_manifest  __init__.py  _document.py
Form-Demo2/: README.md  requirements.txt
Form-Demo2/idl/: Message.idl
Form-Demo2/publisher/: app.py  app.py.old  publisher.py
Form-Demo2/publisher/static/css/: styles.css  styles.css.old
Form-Demo2/publisher/static/js/: main.js  main.js.old  main.js.orig
Form-Demo2/publisher/templates/: index.html  index.html.old  index.html.orig
Form-Demo2/publisher/uploads/: 1220028762_2450410217_25670209_1.xls  CAMS.xlsx  RAMA-5G-Project1_CloudResource_20230124.xlsx  SaleData.xlsx
Form-Demo2/subscriber/: app.py  app.py.old  database.py  messages.db  subscriber.py  subscriber.py.old
Form-Demo2/subscriber/static/css/: styles.css
Form-Demo2/subscriber/static/js/: main.js  main.js.old
Form-Demo2/subscriber/templates/: messages.html  messages.html.old  messages.html.orig
GPS-Demo/: CMakeLists.txt  kill_all.sh  run_all.sh
GPS-Demo/idl/: VehicleGPS.idl
GPS-Demo/src/: config.h  gps-dashboard.html  gps-dashboard.html.orig  gps_data.h  publisher.c  subscriber.c  web_subscriber.c
GPS-Demo/utils/: gps_point_generator  gps_point_generator.c
Sensor-Demo/: CMakeLists.txt  configuration.xml  cyclonedds.xml  cyclonedds.xml.orig
Sensor-Demo-RTI/: README.md
Sensor-Demo-RTI/src/: README_arm64Darwin20clang12.0.txt  SensorData.c  SensorData.h  SensorDataPlugin.c  SensorDataPlugin.h  SensorDataSupport.c  SensorDataSupport.h  SensorData_publisher.c  SensorData_subscriber.c  USER_QOS_PROFILES.xml  USER_QOS_PROFILES.xml.old  makefile_SensorData_arm64Darwin20clang12.0
Sensor-Demo/idl/: SensorData.idl  SensorData_withModule.idl
Sensor-Demo/src/: config.h  publisher.c  publisher.c.single  subscriber.c  subscriber.c.filter
Sensor-Demo/src/opt/: publisher.c  subscriber.c
Test-Cyclone-Python/: README.md  cdds.log.42377  cdds.log.42461  cdds.log.42572  cdds.log.43026  cdds.log.43418  cdds.log.44476  cyclonedds.xml  killall.sh  run_all.sh  setup.sh
Test-Cyclone-Python/idl/: SensorData.idl  sensor_types.idl
Test-Cyclone-Python/src/: config.py  publisher.py  subscriber.py  subscriber.py.orig  web_server.py  web_subscriber.py
Test-Cyclone-Python/src/static/: dashboard.js  dashboard.js.orig  styles.css
Test-Cyclone-Python/src/templates/: index.html  index.html.orig
